Add links between pages

--- a/breakconnect/templates/breakconnect/reset-password.html
+++ b/breakconnect/templates/breakconnect/reset-password.html
@@ -238,7 +238,9 @@
           <div class="component-form-reset-password-YjyU4j">
             <img class="base-H3ri59" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
             <div class="component-form-global-link-H3ri59">
-              <div class="component-form-global-link-A8xxsz ibmplexsans-normal-steel-blue-16px">Back to Sign in</div>
+              <div class="component-form-global-link-A8xxsz ibmplexsans-normal-steel-blue-16px">
+                <a href="{% url 'breakconnect:sign-in' %}">Back to Sign in</a>
+                </div>
             </div>
             <div class="controls-button-H3ri59 smart-layers-pointers">
               <div class="controls-button-e-accent-normal-oA7WPK">
