--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -327,7 +327,9 @@
             </div>
             <div class="controls-button-e-accent-normal-P4lque smart-layers-pointers">
               <div class="controls-button-e-accent-normal-vogk1Y">
-                <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
+                <a href="{% url 'breakconnect:start-chat' %}">
+                  <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
+                </a>
                 <div class="button-WYBrCY ibmplexsans-medium-aqua-haze-16px">Start</div>
               </div>
             </div>
