--- a/breakconnect/templates/breakconnect/start-chat.html
+++ b/breakconnect/templates/breakconnect/start-chat.html
@@ -239,22 +239,24 @@
               <div class="x03-YHy6i4">
                 <div class="component-card-place-card-fill-Oa6pbv smart-layers-pointers">
                   <div class="component-card-place-card-fill-9GU6YE">
-                    <div class="base-wu1M9z">
-                      <img class="mask-VApPm7" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                      <img class="base-VApPm7" src="{% static 'breakconnect/img/base-42@1x.png' %}" />
-                    </div>
-                    <div class="component-card-bal-light-title-wu1M9z">
-                      <div class="component-card-bal-light-title-uZscfi ibmplexsans-bold-white-28px">Mark</div>
-                    </div>
-                    <div class="component-card-ght-description-wu1M9z">
-                      <div class="component-card-ght-description-p6c4A6 ibmplexsans-normal-white-16px">
-                        I just bought a new car!
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <div class="base-wu1M9z">
+                        <img class="mask-VApPm7" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <img class="base-VApPm7" src="{% static 'breakconnect/img/base-42@1x.png' %}" />
                       </div>
-                    </div>
-                    <div class="icon-wu1M9z">
-                      <div class="icon-more-xYnD2f">
-                        <img class="mask-E7awNf" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
-                        <img class="icon-more-E7awNf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                      <div class="component-card-bal-light-title-wu1M9z">
+                        <div class="component-card-bal-light-title-uZscfi ibmplexsans-bold-white-28px">Mark</div>
+                      </div>
+                      <div class="component-card-ght-description-wu1M9z">
+                        <div class="component-card-ght-description-p6c4A6 ibmplexsans-normal-white-16px">
+                          I just bought a new car!
+                        </div>
+                      </div>
+                      <div class="icon-wu1M9z">
+                        <div class="icon-more-xYnD2f">
+                          <img class="mask-E7awNf" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="icon-more-E7awNf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    </a>
                       </div>
                     </div>
                   </div>
@@ -263,23 +265,26 @@
               <div class="x22-YHy6i4">
                 <div class="component-card-place-card-fill-EaXLBm smart-layers-pointers">
                   <div class="component-card-place-card-fill-XJ3yhz">
-                    <div class="base-wlDaJx">
-                      <img class="mask-ewCxtx" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                      <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-44@1x.png' %}" />
-                    </div>
-                    <div class="component-card-bal-light-title-wlDaJx">
-                      <div class="component-card-bal-light-title-RKAI3L ibmplexsans-bold-white-28px">Samantha</div>
-                    </div>
-                    <div class="component-card-ght-description-wlDaJx">
-                      <div class="component-card-ght-description-02HqkJ ibmplexsans-normal-white-16px">
-                        My brother just got his PHD!
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <div class="base-wlDaJx">
+                        <img class="mask-ewCxtx" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-44@1x.png' %}" />
                       </div>
-                    </div>
-                    <div class="icon-wlDaJx">
-                      <div class="icon-more-KwxQxu">
-                        <img class="mask-xjJ49D" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
-                        <img class="icon-more-xjJ49D" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                      <div class="component-card-bal-light-title-wlDaJx">
+                        <div class="component-card-bal-light-title-RKAI3L ibmplexsans-bold-white-28px">Samantha</div>
                       </div>
+                      <div class="component-card-ght-description-wlDaJx">
+                        <div class="component-card-ght-description-02HqkJ ibmplexsans-normal-white-16px">
+                          My brother just got his PHD!
+                        </div>
+                      </div>
+                      <div class="icon-wlDaJx">
+                        <div class="icon-more-KwxQxu">
+                          <img class="mask-xjJ49D" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="icon-more-xjJ49D" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                        </div>
+                    </a>
+                    
                     </div>
                   </div>
                 </div>
@@ -289,23 +294,26 @@
               <div class="x12-mlFh8x">
                 <div class="component-card-place-card-fill-Eyzx5u smart-layers-pointers">
                   <div class="component-card-place-card-fill-bvxr64">
-                    <div class="base-vwdeES">
-                      <img class="mask-2xdTx2" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                      <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
-                    </div>
-                    <div class="component-card-bal-light-title-vwdeES">
-                      <div class="component-card-bal-light-title-COwMXj ibmplexsans-bold-white-28px">Mary</div>
-                    </div>
-                    <div class="component-card-ght-description-vwdeES">
-                      <div class="component-card-ght-description-JLWJVv ibmplexsans-normal-white-16px">
-                        My son Jim won a science fair at school!
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <div class="base-vwdeES">
+                        <img class="mask-2xdTx2" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
                       </div>
-                    </div>
-                    <div class="icon-vwdeES">
-                      <div class="icon-more-aGfvKJ">
-                        <img class="mask-Hkkn1q" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
-                        <img class="icon-more-Hkkn1q" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                      <div class="component-card-bal-light-title-vwdeES">
+                        <div class="component-card-bal-light-title-COwMXj ibmplexsans-bold-white-28px">Mary</div>
                       </div>
+                      <div class="component-card-ght-description-vwdeES">
+                        <div class="component-card-ght-description-JLWJVv ibmplexsans-normal-white-16px">
+                          My son Jim won a science fair at school!
+                        </div>
+                      </div>
+                      <div class="icon-vwdeES">
+                        <div class="icon-more-aGfvKJ">
+                          <img class="mask-Hkkn1q" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="icon-more-Hkkn1q" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                        </div>
+                    </a>
+                    
                     </div>
                   </div>
                 </div>
@@ -313,23 +321,26 @@
               <div class="x32-mlFh8x">
                 <div class="component-card-place-card-fill-zoznYY smart-layers-pointers">
                   <div class="component-card-place-card-fill-uHism7">
-                    <div class="base-MnkzXL">
-                      <img class="mask-KTN09D" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                      <img class="base-KTN09D" src="{% static 'breakconnect/img/base-45@1x.png' %}" />
-                    </div>
-                    <div class="component-card-bal-light-title-MnkzXL">
-                      <div class="component-card-bal-light-title-DBdwPk ibmplexsans-bold-white-28px">John</div>
-                    </div>
-                    <div class="component-card-ght-description-MnkzXL">
-                      <div class="component-card-ght-description-pxZLy0 ibmplexsans-normal-white-16px">
-                        I just went rock climbing on the weekend!
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <div class="base-MnkzXL">
+                        <img class="mask-KTN09D" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <img class="base-KTN09D" src="{% static 'breakconnect/img/base-45@1x.png' %}" />
                       </div>
-                    </div>
-                    <div class="icon-MnkzXL">
-                      <div class="icon-more-UpTd2x">
-                        <img class="mask-2HZVUw" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
-                        <img class="icon-more-2HZVUw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                      <div class="component-card-bal-light-title-MnkzXL">
+                        <div class="component-card-bal-light-title-DBdwPk ibmplexsans-bold-white-28px">John</div>
                       </div>
+                      <div class="component-card-ght-description-MnkzXL">
+                        <div class="component-card-ght-description-pxZLy0 ibmplexsans-normal-white-16px">
+                          I just went rock climbing on the weekend!
+                        </div>
+                      </div>
+                      <div class="icon-MnkzXL">
+                        <div class="icon-more-UpTd2x">
+                          <img class="mask-2HZVUw" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="icon-more-2HZVUw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                        </div>
+                    </a>
+                    
                     </div>
                   </div>
                 </div>
@@ -373,11 +384,13 @@
                 </div>
                 <div class="elements-chat-b-ght-bottom-left-Gw4LiT smart-layers-pointers">
                   <div class="elements-chat-b-ght-bottom-left-skaqMR">
-                    <img class="caret-x5E8JZ" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-x5E8JZ" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
-                    <div class="chat-message-x5E8JZ ibmplexsans-normal-storm-gray-14px">
-                      Damn man that&#39;s dope, do you have a tracking mount?
-                    </div>
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <img class="caret-x5E8JZ" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                      <img class="base-x5E8JZ" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
+                      <div class="chat-message-x5E8JZ ibmplexsans-normal-storm-gray-14px">
+                        Damn man that&#39;s dope, do you have a tracking mount?
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -387,10 +400,12 @@
                 </div>
                 <div class="elements-chat-b-ght-bottom-left-4eDQ5s smart-layers-pointers">
                   <div class="elements-chat-b-ght-bottom-left-YmGiZP">
-                    <img class="caret-lXRp1i" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-lXRp1i" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
-                    <div class="chat-message-lXRp1i ibmplexsans-normal-storm-gray-14px">
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <img class="caret-lXRp1i" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                      <img class="base-lXRp1i" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
+                      <div class="chat-message-lXRp1i ibmplexsans-normal-storm-gray-14px">
                       Woah so cool, do you have any photos I can see?
+                    </a>
                     </div>
                   </div>
                 </div>
@@ -401,10 +416,12 @@
                 </div>
                 <div class="elements-chat-b-ght-bottom-left-MOyXne smart-layers-pointers">
                   <div class="elements-chat-b-ght-bottom-left-CmqYet">
-                    <img class="caret-xE5tIi" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-xE5tIi" src="{% static 'breakconnect/img/base-53@1x.png' %}" />
-                    <div class="chat-message-xE5tIi ibmplexsans-normal-storm-gray-14px">
+                    <a href="{% url 'breakconnect:current-chat' %}">
+                      <img class="caret-xE5tIi" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                      <img class="base-xE5tIi" src="{% static 'breakconnect/img/base-53@1x.png' %}" />
+                      <div class="chat-message-xE5tIi ibmplexsans-normal-storm-gray-14px">
                       How have you been?! Wanna catch up for a beer over zoom after work?
+                    </a>
                     </div>
                   </div>
                 </div>
