--- a/breakconnect/templates/breakconnect/sign-up.html
+++ b/breakconnect/templates/breakconnect/sign-up.html
@@ -239,7 +239,9 @@
             <img class="base-x2VZAn" src="{% static 'breakconnect/img/base-21@1x.png' %}" />
             <div class="controls-button-x2VZAn smart-layers-pointers">
               <div class="controls-button-e-accent-normal-UC2Ss6">
-                <img class="base-qEpnVR" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                  <a href="{% url 'breakconnect:start-break' %}">
+                    <img class="base-qEpnVR" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                  </a>
                 <div class="button-qEpnVR ibmplexsans-medium-aqua-haze-16px">Sign Up</div>
               </div>
             </div>
@@ -305,7 +307,9 @@
               </div>
             </div>
             <div class="component-form-global-link-x2VZAn">
-              <div class="component-form-global-link-hU8uyr ibmplexsans-normal-steel-blue-16px">Sign in</div>
+              <div class="component-form-global-link-hU8uyr ibmplexsans-normal-steel-blue-16px"> 
+                <a href="{% url 'breakconnect:sign-in' %}">Sign in</a>
+              </div>
             </div>
             <div class="component-form-bal-description-x2VZAn">
               <div class="component-form-bal-description-VMa6Xf ibmplexsans-normal-charade-16px">
