Add text fields to sign in page

--- a/breakconnect/static/breakconnect/css/current-chat.css
+++ b/breakconnect/static/breakconnect/css/current-chat.css
@@ -1,5 +1,10 @@
 /* screen - current-chat */
 
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+}
+
 .current-chat {
   align-items: center;
   background-color: var(--aqua-haze);
