--- a/breakconnect/templates/breakconnect/sign-in.html
+++ b/breakconnect/templates/breakconnect/sign-in.html
@@ -238,7 +238,12 @@
               <div class="controls-text-field-XrNhcc">
                 <div class="controls-text-field-normal-e6shCY">
                   <img class="base-g0kJNi" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
-                  <div class="placeholder-g0kJNi ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
+                  <input
+                    class="placeholder-g0kJNi ibmplexsans-normal-cerulean-frost-16px"
+                    name="placeholder1"
+                    placeholder=" "
+                    required
+                  />
                 </div>
               </div>
             </div>
@@ -253,7 +258,13 @@
               <div class="controls-text-field-s7Reux">
                 <div class="controls-text-field-normal-fHxm8M">
                   <img class="base-HVzydu" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
-                  <div class="placeholder-HVzydu ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
+                  <input
+                    class="placeholder-HVzydu ibmplexsans-normal-cerulean-frost-16px"
+                    name="placeholder11"
+                    placeholder=" "
+                    type="email"
+                    required
+                  />
                 </div>
               </div>
             </div>
