--- a/breakconnect/static/breakconnect/css/sign-up.css
+++ b/breakconnect/static/breakconnect/css/sign-up.css
@@ -1,4 +1,8 @@
 /* screen - sign-up */
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+}
 
 .ibmplexsans-bold-charade-34px {
   color: var(--charade);
