Add forms to sign-up page

--- a/breakconnect/templates/breakconnect/sign-in.html
+++ b/breakconnect/templates/breakconnect/sign-in.html
@@ -226,13 +226,13 @@
             <a href="{% url 'breakconnect:reset-password' %}">Forgot password?</a>
           </div>
         </div>
-        <a href="javascript:SubmitForm('form1')">	
-          <div class="controls-button-r0SCOi smart-layers-pointers">	
-            <div class="controls-button-e-accent-normal-wG9ECl">	
-              <img class="base-9ExXe4" src="{% static 'breakconnect/img/base-3@1x.png' %}" />	
-              <div class="button-9ExXe4 ibmplexsans-medium-aqua-haze-16px">Sign In</div>	
-            </div>	
-          </div>	
+        <a href="javascript:SubmitForm('form1')">
+          <div class="controls-button-r0SCOi smart-layers-pointers">
+            <div class="controls-button-e-accent-normal-wG9ECl">
+              <img class="base-9ExXe4" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+              <div class="button-9ExXe4 ibmplexsans-medium-aqua-haze-16px">Sign In</div>
+            </div>
+          </div>
         </a>
         <div class="controls-place-text-field-r0SCOi">
           <div class="controls-place-text-field-ihy4zn">
@@ -245,7 +245,7 @@
               <div class="controls-text-field-normal-e6shCY">
                 <img class="base-g0kJNi" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
                 <input class="placeholder-g0kJNi ibmplexsans-normal-cerulean-frost-16px" name="placeholder1"
-                  placeholder=" " required />
+                  placeholder=" " type="password" required />
               </div>
             </div>
           </div>
@@ -283,19 +283,6 @@
       <img class="base-C61RwL" src="{% static 'breakconnect/img/base-54@1x.png' %}" />
       <div class="component-heade-ive-header-copy-C61RwL">
         <div class="component-heade-sponsive-header-CkLYbh">
-          <div class="component-heade-ponsive-trigger-tHI9HX">
-            <div class="component-heade-ponsive-trigger-elyEUS">
-              <div class="icon-mxoZ1G">
-                <div class="icon-menu-pDsVjJ">
-                  <img class="mask-toIDGu" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                  <img class="icon-menu-toIDGu" src="{% static 'breakconnect/img/icon-menu@1x.png' %}" />
-                </div>
-              </div>
-              <div class="component-heade-global-nav-item-mxoZ1G">
-                <div class="component-heade-global-nav-item-IxTgWW ibmplexsans-normal-charade-16px">Menu</div>
-              </div>
-            </div>
-          </div>
           <div class="logo-type-dark-tHI9HX">
             <div class="logo-type-dark-WsgA5a"></div>
           </div>
