--- a/breakconnect/static/breakconnect/css/current-chat.css
+++ b/breakconnect/static/breakconnect/css/current-chat.css
@@ -990,11 +990,14 @@ transform: scale(1.1);
 }
 .current-chat .placeholder-hzKeH2 {
   background-color: transparent;
+  border: 0;
   height: 45px;
   left: 16px;
   letter-spacing: 0.00px;
   line-height: 16px;
+  padding: 0;
   position: absolute;
+  resize: none;
   text-align: left;
   top: 16px;
   width: calc(100.00% - 71px);
