--- a/breakconnect/static/breakconnect/css/start-break.css
+++ b/breakconnect/static/breakconnect/css/start-break.css
@@ -1,8 +1,4 @@
 /* screen - start-break */
-button, input, select, textarea {
-  font-family: inherit;
-  font-size: 100%;
-}
 
 .ibmplexsans-bold-charade-34px {
   color: var(--charade);
@@ -1074,14 +1070,20 @@ transform: scale(1.02);
 }
 .start-break .placeholder-0PYIjK {
   background-color: transparent;
+  border: 0;
   height: 76px;
   left: 16px;
   letter-spacing: 0.00px;
   line-height: 16px;
+  padding: 0;
   position: absolute;
+  resize: none;
   text-align: left;
   top: 16px;
   width: calc(100.00% - 30px);
+}
+.start-break .placeholder-0PYIjK::placeholder {
+  color: rgba(124,156,191,0.6);
 }
 .start-break .repeat-grid-1-dXBp89 {
   align-items: flex-start;
@@ -1181,27 +1183,39 @@ transform: scale(1.02);
 }
 .start-break .x01-4wKRxZ {
   background-color: transparent;
-  height: auto;
+  border: 0;
+  height: 22px;
   left: 80px;
   letter-spacing: 0.00px;
   line-height: 16px;
+  padding: 0;
   position: absolute;
+  resize: none;
   text-align: center;
   top: 18px;
   white-space: nowrap;
-  width: auto;
+  width: 22px;
+}
+.start-break .x01-4wKRxZ::placeholder {
+  color: rgba(44,39,56,0.6);
 }
 .start-break .x01-cYb587 {
   background-color: transparent;
-  height: auto;
+  border: 0;
+  height: 22px;
   left: 80px;
   letter-spacing: 0.00px;
   line-height: 16px;
+  padding: 0;
   position: absolute;
+  resize: none;
   text-align: center;
   top: 18px;
   white-space: nowrap;
-  width: auto;
+  width: 22px;
+}
+.start-break .x01-cYb587::placeholder {
+  color: rgba(44,39,56,0.6);
 }
 .start-break .x1-mlFh8x {
   align-items: flex-start;
