Fix startbreak button

--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -334,9 +334,7 @@
           <a href="javascript:SubmitForm('form1')">
             <div class="controls-button-e-accent-normal-P4lque smart-layers-pointers">
               <div class="controls-button-e-accent-normal-vogk1Y">
-                <a href="{% url 'breakconnect:start-chat' %}">
                   <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
-                </a>
                 <div class="button-WYBrCY ibmplexsans-medium-aqua-haze-16px">Start</div>
               </div>
             </div>
@@ -401,7 +399,7 @@
                 <div class="controls-text-area-placeholder-kwfwvO">
                   <img class="base-0PYIjK" src="{% static 'breakconnect/img/base-17@1x.png' %}" />
                   <textarea class="placeholder-0PYIjK ibmplexsans-normal-cerulean-frost-16px" name="placeholder1"
-                    placeholder="Aa"></textarea>
+                    placeholder="Aa" required></textarea>
                 </div>
               </div>
               <div class="controls-global-label-2OxO7H">
