changed form field names in start-break

--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -218,7 +218,7 @@
 <body style="margin: 0; background: rgba(235, 244, 248, 1)">
   <input type="hidden" id="anPageName" name="page" value="start-break" />
   <div class="container-center-horizontal">
-    <form class="start-break screen" name="form1" action="form1" method="post">
+    <form class="start-break screen" name="breakform" method="POST">
       <div class="component-heade-lace-web-header-C61RwL">
         <div class="component-heade-lace-web-header-fKQF6J">
           <div class="component-heade-obal-navigation-bdw52J">
@@ -360,7 +360,7 @@
                       </div>
                     </div>
                   </div>
-                  <input class="x01-4wKRxZ ibmplexsans-normal-charade-16px" name="013" placeholder="1" required />
+                  <input class="x01-4wKRxZ ibmplexsans-normal-charade-16px" name="hours" placeholder="1" required />
                 </div>
               </div>
             </div>
@@ -386,7 +386,7 @@
                       </div>
                     </div>
                   </div>
-                  <input class="x01-cYb587 ibmplexsans-normal-charade-16px" name="0131" placeholder="15" required />
+                  <input class="x01-cYb587 ibmplexsans-normal-charade-16px" name="minutes" placeholder="15" required />
                 </div>
               </div>
             </div>
@@ -398,7 +398,7 @@
               <div class="controls-text-area-2OxO7H">
                 <div class="controls-text-area-placeholder-kwfwvO">
                   <img class="base-0PYIjK" src="{% static 'breakconnect/img/base-17@1x.png' %}" />
-                  <textarea class="placeholder-0PYIjK ibmplexsans-normal-cerulean-frost-16px" name="placeholder1"
+                  <textarea class="placeholder-0PYIjK ibmplexsans-normal-cerulean-frost-16px" name="status"
                     placeholder="Aa" required></textarea>
                 </div>
               </div>
