--- a/usersapp/templates/usersapp/sign-up.html
+++ b/usersapp/templates/usersapp/sign-up.html
@@ -223,7 +223,7 @@
       <img class="base-C61RwL" src="{% static 'usersapp/img/base@1x.png' %}" />
       <div class="component-heade-ive-header-copy-C61RwL">
         <div class="component-heade-sponsive-header-CkLYbh">
-          <a href="{% url 'usersapp:sign-in' %}">
+          <a href="{% url 'sign-in' %}">
             <div class="group-6-tHI9HX">
               <div class="component-heade-ponsive-trigger-A7q6Rc">
                 <div class="component-heade-ponsive-trigger-f2gFTI">
@@ -269,20 +269,6 @@
               </div>
             </div>
           </div>
-          <div class="controls-place-text-field-x2VZAn">
-            <div class="controls-place-text-field-WMYAJx">
-              <div class="controls-global-label-EWz6jK">
-                <div class="controls-global-label-kn8azF">
-                  <div class="label-WKxA5H ibmplexsans-medium-storm-gray-16px">Organisation Code</div>
-                </div>
-              </div>
-              <div class="controls-text-field-EWz6jK">
-                <div class="controls-text-field-normal-2c5cad">
-                  <img class="base-DciiAQ" src="{% static 'usersapp/img/base-4@1x.png' %}" />
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="controls-place-text-field-DdaYsx">
             <div class="controls-place-text-field-vWNzVw">
               <div class="controls-global-label-MxyXZj">
@@ -313,7 +299,7 @@
           </div>
           <div class="component-form-global-link-x2VZAn">
             <div class="component-form-global-link-hU8uyr ibmplexsans-normal-steel-blue-16px">
-              <a href="{% url 'usersapp:sign-in' %}">Sign In</a>
+              <a href="{% url 'sign-in' %}">Sign In</a>
             </div>
           </div>
           <div class="component-form-bal-description-x2VZAn">
